Fixed clipping

--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ body {
   @media (max-width: 37.5em) {
     .header {
       height: 90vh;
-      clip-path: polygon(0% 0%, 100% 0%, 100% 78%, 50% 100%, 0% 80%); } }
+      clip-path: polygon(0% 0%, 100% 0%, 100% 78%, 50% 90%, 0% 80%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
